refactor HandTiles, Lists, Maps